css fix for combobox misalign in dLibra

--- a/djvu-html5/war/Djvu_html5.css
+++ b/djvu-html5/war/Djvu_html5.css
@@ -71,7 +71,6 @@ body {
 .comboBoxText {
 	position: absolute;
 	left: 2px;
-	top: 2px;
 	bottom: 0px;
 	width: 55px;
 	border: none;
